website near me restaurant

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive website food</title>
+        <title>WEBSITE NEAR ME restaurant</title>
     </head>
     <body>
 
